--- a/Cannon-Shooter/Phong/Phong.vcxproj.filters
+++ b/Cannon-Shooter/Phong/Phong.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="physics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="texture.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="physics.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
